토론 튜터 프로젝트 전체 리팩토링 - 헤더, 네비게이션 개선 및 토론 시나리오 생성 기능 강화

--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "repository": {
     "type": "git",
@@ -21,11 +24,19 @@
     "@types/node": "^22.14.1",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.23",
+    "tailwindcss": "^3.3.0",
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@types/uuid": "^10.0.0",
+    "mongodb": "^6.16.0",
+    "mongoose": "^8.13.2",
     "next": "^15.3.1",
+    "openai": "^4.95.1",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "uuid": "^11.1.0"
   }
 }
