OpenAI에서 Google Gemini 2.0-flash 모델로 변경

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
-# OpenAI API 키 - https://platform.openai.com/api-keys에서 발급 가능
-OPENAI_API_KEY=your_openai_api_key_here
+# OpenAI API 키 (비활성화) - https://platform.openai.com/api-keys에서 발급 가능
+# OPENAI_API_KEY=your_openai_api_key_here
+
+# Google Gemini API 키 - https://ai.google.dev/tutorials/setup에서 발급 가능
+GEMINI_API_KEY=your_gemini_api_key_here
 
 # MongoDB 연결 정보 - MongoDB Atlas에서 생성한 연결 문자열
 MONGODB_URI=mongodb+srv://username:password@your_cluster.mongodb.net/?retryWrites=true&w=majority
