Gemini 모델로 통일 및 파일 경로 대소문자 이슈 수정

--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,12 @@
       "use": "@vercel/next"
     }
   ],
-  "installCommand": "npm install --force",
+  "installCommand": "npm install",
   "buildCommand": "npm run build",
-  "devCommand": "npm run dev"
+  "devCommand": "npm run dev",
+  "git": {
+    "deploymentEnabled": {
+      "main": true
+    }
+  }
 } 
