--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,12 +2,13 @@
   "compilerOptions": {
     /* Visit https://aka.ms/tsconfig to read more about this file */
     /* Projects */
-    "incremental": true, /* Save .tsbuildinfo files to allow for incremental compilation of projects. */
-    "composite": true, /* Enable constraints that allow a TypeScript project to be used with project references. */
+    "incremental": false, /* Save .tsbuildinfo files to allow for incremental compilation of projects. */
+    "composite": false, /* Enable constraints that allow a TypeScript project to be used with project references. */
     "tsBuildInfoFile": "./.tsbuildinfo", /* Specify the path to .tsbuildinfo incremental compilation file. */
-    "disableSourceOfProjectReferenceRedirect": true, /* Disable preferring source files instead of declaration files when referencing composite projects. */
-    "disableSolutionSearching": true, /* Opt a project out of multi-project reference checking when editing. */
-    "disableReferencedProjectLoad": true, /* Reduce the number of projects loaded automatically by TypeScript. *//* Language and Environment */
+    "disableSourceOfProjectReferenceRedirect": false, /* Disable preferring source files instead of declaration files when referencing composite projects. */
+    "disableSolutionSearching": false, /* Opt a project out of multi-project reference checking when editing. */
+    "disableReferencedProjectLoad": false, /* Reduce the number of projects loaded automatically by TypeScript. */
+    /* Language and Environment */
     "target": "es5",
     "lib": [
       "dom",
